--- a/config.yml
+++ b/config.yml
@@ -5,19 +5,20 @@ names:
   - Filter
 #Prevent items from being pulled down by another hopper
 preventitempull: false
+preventitempickup: false
 # If true, the plugin will listen to block break events and if a sorter block was broken
 # it will replace dropped hopper with the named one.
 # In order to do so, it have to cancel the breaking event and replace block with AIR.
 # WARNING! May cause interference with logging and protection plugins!
 replacedrops: true
-#Recipe
+#Recipes
 crafting:
-  # Enable crafting recipe
+  # is crafting enabled at all?
   enabled: true
-  # shaped or shapeless recipe
+  # shaped or shapeless recipe?
   shaped: true
   # the recipe: for shaped, a list of 1-3 rows, each row with 1-3 letters
-  # for shapeless, a list of 1-9 materials in any order
+  #  for shapeless, a list of 1-9 materials in any order
   recipe: [ "IRI", "ICI", " I " ]
   # the ingredients: map a letter in the recipe to a material
   ingredients:
