--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 name: SortingHopper
 main: point3d.sortinghopper.SortingHopper
 description: Bukkit plugin that creates item filter from a hopper
-version: 0.9
+version: 1.1
+api-version: 1.13
 load: STARTUP
