--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,8 @@
-name: SortingHopper
-main: point3d.sortinghopper.SortingHopper
+name: SortingHopper2
+main: point3d.sortinghopper2.SortingHopper
 description: Bukkit plugin that creates item filter from a hopper
-version: 1.1
+version: 2.1
 api-version: 1.13
-load: STARTUP
+commands:
+  sortinghopper:
+    description: give | save [name] | load [name] | reload | importminecrafttags
