--- a/itemgroups.yml
+++ b/itemgroups.yml
@@ -55,7 +55,7 @@ Armor:
 - GOLDEN_BOOTS
 - IRON_BOOTS
 - DIAMOND_BOOTS
-Stone:
+Stone variants:
 - STONE
 - SMOOTH_STONE
 - GRANITE
@@ -72,6 +72,8 @@ Cobblestone:
 Mossy cobblestone:
 - MOSSY_COBBLESTONE
 - MOSSY_COBBLESTONE_WALL
+- MOSSY_COBBLESTONE_STAIRS
+- MOSSY_COBBLESTONE_SLAB
 Sandstone:
 - SANDSTONE
 - RED_SANDSTONE
@@ -85,6 +87,13 @@ Sandstone:
 - RED_SANDSTONE_SLAB
 - SANDSTONE_STAIRS
 - RED_SANDSTONE_STAIRS
+- SMOOTH_SANDSTONE_STAIRS
+- SMOOTH_SANDSTONE_STAIRS
+- SMOOTH_RED_SANDSTONE_STAIRS
+- SMOOTH_SANDSTONE_SLAB
+- CUT_SANDSTONE_SLAB
+- SMOOTH_RED_SANDSTONE_SLAB
+- CUT_RED_SANDSTONE_SLAB
 Stone bricks:
 - CRACKED_STONE_BRICKS
 - STONE_BRICKS
@@ -221,6 +230,8 @@ Nether bricks:
 - NETHER_BRICK_STAIRS
 - NETHER_BRICK_FENCE
 - RED_NETHER_BRICKS
+- RED_NETHER_BRICK_SLAB
+- RED_NETHER_BRICK_STAIRS
 Quartz:
 - QUARTZ
 - QUARTZ_BLOCK
@@ -228,6 +239,8 @@ Quartz:
 - QUARTZ_SLAB
 - QUARTZ_STAIRS
 - SMOOTH_QUARTZ
+- SMOOTH_QUARTZ_STAIRS
+- SMOOTH_QUARTZ_SLAB
 - CHISELED_QUARTZ_BLOCK
 Ore:
 - COAL_ORE
@@ -258,43 +271,72 @@ Planks:
 - JUNGLE_STAIRS
 - DARK_OAK_STAIRS
 Stairs:
-- STONE_BRICK_STAIRS
+- STONE_STAIRS
 - COBBLESTONE_STAIRS
+- MOSSY_COBBLESTONE_STAIRS
+- STONE_BRICK_STAIRS
+- MOSSY_STONE_BRICK_STAIRS
+- SANDSTONE_STAIRS
+- SMOOTH_SANDSTONE_STAIRS
+- RED_SANDSTONE_STAIRS
+- SMOOTH_RED_SANDSTONE_STAIRS
 - ACACIA_STAIRS
 - OAK_STAIRS
-- PRISMARINE_BRICK_STAIRS
 - PRISMARINE_STAIRS
-- RED_SANDSTONE_STAIRS
-- QUARTZ_STAIRS
-- PURPUR_STAIRS
-- SPRUCE_STAIRS
-- BIRCH_STAIRS
-- NETHER_BRICK_STAIRS
-- SANDSTONE_STAIRS
-- JUNGLE_STAIRS
+- PRISMARINE_BRICK_STAIRS
 - DARK_PRISMARINE_STAIRS
+- QUARTZ_STAIRS
+- SMOOTH_QUARTZ_STAIRS
+- PURPUR_STAIRS
+- NETHER_BRICK_STAIRS
+- RED_NETHER_BRICK_STAIRS
+- GRANITE_STAIRS
+- ANDESITE_STAIRS
+- DIORITE_STAIRS
+- POLISHED_GRANITE_STAIRS
+- POLISHED_ANDESITE_STAIRS
+- POLISHED_DIORITE_STAIRS
+- JUNGLE_STAIRS
 - BRICK_STAIRS
 - DARK_OAK_STAIRS
+- SPRUCE_STAIRS
+- BIRCH_STAIRS
+- SMOOTH_SANDSTONE_STAIRS
+- SMOOTH_RED_SANDSTONE_STAIRS
 Slabs:
-- PRISMARINE_SLAB
-- BRICK_SLAB
-- SANDSTONE_SLAB
+- COBBLESTONE_SLAB
+- MOSSY_COBBLESTONE_SLAB
 - STONE_SLAB
-- QUARTZ_SLAB
-- STONE_BRICK_SLAB
-- PRISMARINE_BRICK_SLAB
-- DARK_OAK_SLAB
-- SPRUCE_SLAB
-- DARK_PRISMARINE_SLAB
-- BIRCH_SLAB
-- RED_SANDSTONE_SLAB
-- PURPUR_SLAB
-- PETRIFIED_OAK_SLAB
-- NETHER_BRICK_SLAB
+- SMOOTH_STONE_SLAB
 - OAK_SLAB
 - ACACIA_SLAB
 - JUNGLE_SLAB
-- COBBLESTONE_SLAB
+- DARK_OAK_SLAB
+- SPRUCE_SLAB
+- BIRCH_SLAB
+- PETRIFIED_OAK_SLAB
+- BRICK_SLAB
+- NETHER_BRICK_SLAB
+- RED_NETHER_BRICK_SLAB
+- SANDSTONE_SLAB
+- CUT_SANDSTONE_SLAB
+- RED_SANDSTONE_SLAB
+- CUT_RED_SANDSTONE_SLAB
+- QUARTZ_SLAB
+- SMOOTH_QUARTZ_SLAB
+- STONE_BRICK_SLAB
+- MOSSY_STONE_BRICK_SLAB
+- END_STONE_BRICK_SLAB
+- PRISMARINE_SLAB
+- PRISMARINE_BRICK_SLAB
+- DARK_PRISMARINE_SLAB
+- PURPUR_SLAB
+- GRANITE_SLAB
+- POLISHED_GRANITE_SLAB
+- DIORITE_SLAB
+- POLISHED_DIORITE_SLAB
+- ANDESITE_SLAB
+- POLISHED_ANDESITE_SLAB
 Doors:
 - OAK_DOOR
 - ACACIA_DOOR
@@ -539,6 +581,7 @@ Vegetables:
 - APPLE
 - CARROT
 - MELON_SLICE
+- SWEET_BERRIES
 Cooked food:
 - COOKED_BEEF
 - COOKED_CHICKEN
@@ -556,6 +599,7 @@ Cooked food:
 - RABBIT_STEW
 - PUMPKIN_PIE
 - BREAD
+- SUSPICIOUS_STEW
 Music discs:
 - MUSIC_DISC_11
 - MUSIC_DISC_13
@@ -604,12 +648,12 @@ Beds:
 - WHITE_BED
 - YELLOW_BED
 Dyes:
-- INK_SAC
-- LAPIS_LAZULI
-- COCOA_BEANS
+- BLACK_DYE
+- BLUE_DYE
+- BROWN_DYE
 - CYAN_DYE
 - GRAY_DYE
-- CACTUS_GREEN
+- GREEN_DYE
 - LIGHT_BLUE_DYE
 - LIGHT_GRAY_DYE
 - LIME_DYE
@@ -617,14 +661,15 @@ Dyes:
 - ORANGE_DYE
 - PINK_DYE
 - PURPLE_DYE
-- ROSE_RED
-- BONE_MEAL
-- DANDELION_YELLOW
+- RED_DYE
+- WHITE_DYE
+- YELLOW_DYE
 Seeds:
 - BEETROOT_SEEDS
 - MELON_SEEDS
 - PUMPKIN_SEEDS
 - WHEAT_SEEDS
+- COCOA_BEANS
 Spawn eggs:
 - BAT_SPAWN_EGG
 - BLAZE_SPAWN_EGG
@@ -677,3 +722,9 @@ Spawn eggs:
 - ZOMBIE_PIGMAN_SPAWN_EGG
 - ZOMBIE_SPAWN_EGG
 - ZOMBIE_VILLAGER_SPAWN_EGG
+- FOX_SPAWN_EGG
+- PANDA_SPAWN_EGG
+- PILLAGER_SPAWN_EGG
+- RAVAGER_SPAWN_EGG
+- TRADER_LLAMA_SPAWN_EGG
+- WANDERING_TRADER_SPAWN_EGG
