--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,8 @@ main: point3d.sortinghopper2.SortingHopper
 description: Bukkit plugin that creates item filter from a hopper
 version: 2.3
 api-version: 1.13
+softdepend:
+  - Multiverse-Core
 commands:
   sortinghopper:
     description: give | save [name] | load [name] | reload | importminecrafttags
