--- a/src/main/resources/itemgroups.yml
+++ b/src/main/resources/itemgroups.yml
@@ -19,6 +19,10 @@ Tools:
 - DIAMOND_PICKAXE
 - DIAMOND_AXE
 - DIAMOND_HOE
+- NETHERITE_SHOVEL
+- NETHERITE_PICKAXE
+- NETHERITE_AXE
+- NETHERITE_HOE
 - FLINT_AND_STEEL
 - SHEARS
 Weapons:
